# CodeDllm

./: .gitignore  .gitmodules  AGENTS.md  README.md  build_baseline.py  env_setup.sh  pull_hf_assets.sh  pyproject.toml  requirements.txt  rl.py  rl_margin.py  run_rl_multitask.sh
accelerate_configs/: 1_node_1_gpus_deepspeed_zero3.yaml  1_node_2_gpus_deepspeed_zero3.yaml  1_node_4_gpus_deepspeed_zero3.yaml
configs/: rl_dream_py.yaml  rl_dream_py_multitask.yaml  rl_dream_py_multitask_margin.yaml  sft_dream_py.yaml  sft_dream_py_ast_multitask_stage1.yaml  sft_dream_py_ast_multitask_stage2.yaml  sft_dream_py_ast_multitask_sven_stage1_1_1024.yaml  sft_dream_py_ast_multitask_sven_stage2_1_1024.yaml
docs/: RL_SEC_INTEGRATION_PLAN.md  RL_SEC_INTEGRATION_PLAN_EN.md
eval/: analysis.py  analysis.sh  batch_analysis.py  batch_eval.py  batch_eval.sh  demo_chat.py  demo_chat_dream.py  demo_chat_dream_multitask.py  evalperf_runner.py  evaluator.py  gen_dream_eval.py  gen_dream_eval_ast.py  gen_dream_eval_multitask.py  gen_dream_eval_multitask_ast.py  gen_eval.py  gen_eval.sh  gen_eval_ast.py  gen_eval_multitask.py  gen_eval_multitask_ast.py  gen_eval_online.py  gen_eval_online_ast.py  posprocess.sh
models/: __init__.py
reward/: rewardmodel.py
train/: prompting_utils.py  rl_dream_train.py  rl_dream_train_multitask.py  rl_dream_train_multitask_margin.py  sft_dream_chat.py  sft_dream_chat_all_mask.py  sft_dream_dag.py  sft_dream_dag_no_pad.py  sft_dream_dag_right_pad.py  sft_dream_dataset.py  sft_dream_dataset_ast.py  sft_dream_dataset_ast_m.py  sft_dream_dataset_ast_m_multitask.py  sft_dream_dataset_ast_m_multitask_sven.py  sft_dream_dataset_ast_m_sven.py  sft_dream_dataset_ast_multitask.py  sft_dream_dataset_m.py  sft_dream_my.py  sft_dream_online.py  sft_dream_online_ast.py  sft_dream_online_v1.py  sft_dream_template.py  sft_dream_train.py  sft_dream_train_multitask.py  sft_dream_train_multitask_stage1.py
utils/: __init__.py  ast_dag.py  ast_token_mapping.py  convert_data_ast2multitask.py  data_structure.py  postprocess_pl.py  py_sandbox.py
(+21 files in other folders)
